--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,34 @@
 [versions]
-core-ktx = "1.9.0"
+coreKtx = "1.9.0"
+#core-ktx = "1.9.0"
+#core-ktx = "1.9.0"
+#core-ktx = "1.9.0"
+#core-ktx = "1.9.0"
+#core-ktx = "1.9.0"
+#core-ktx = "1.9.0"
+#core-ktx = "1.9.0"
+#core-ktx = "1.9.0"
+#core-ktx = "1.9.0"
+#core-ktx = "1.9.0"
+#core-ktx = "1.9.0"
+#composeUi = "1.4.0"
 
 [libraries]
-androidx-core-ktx = { module= "androidx.core:core-ktx", version.ref="core-ktx" }
+androidxCoreKtx = { module= "androidx.core:core-ktx", version.ref="coreKtx" }
+#androidx-core-ktx = { module= "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref="core-ktx" }
+#androidx-core-ktx = { module= "androidx.lifecycle:lifecycle-livedata-ktx", version.ref="core-ktx" }
+#androidx-core-ktx = { module= "androidx.lifecycle:lifecycle-runtime-ktx", version.ref="core-ktx" }
+#androidx-core-ktx = { module= "androidx.lifecycle:lifecycle-viewmodel-savedstate", version.ref="core-ktx" }
+#androidx-core-ktx = { module= "junit:junit", version.ref="core-ktx" }
+#androidx-core-ktx = { module= "androidx.test.ext:junit", version.ref="core-ktx" }
+#androidx-core-ktx = { module= "androidx.test.espresso:espresso-core", version.ref="core-ktx" }
+# start compose
+#androidx-core-ktx = { module= "androidx.activity:activity-compose", version.ref="core-ktx" }
+#androidx-core-ktx = { module= "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref="core-ktx" }
+#androidx-core-ktx = { module= "androidx.compose.ui:ui", version.ref="composeUi" }
+#androidx-core-ktx = { module= "androidx.compose.ui:ui-tooling-preview", version.ref="composeUi" }
+#androidx-core-ktx = { module= "androidx.compose.material3:material3", version.ref="core-ktx" }
+#androidx-core-ktx = { module= "androidx.compose.ui:ui-test-junit4", version.ref="composeUi" }
+#androidx-core-ktx = { module= "androidx.compose.ui:ui-tooling", version.ref="composeUi" }
+#androidx-core-ktx = { module= "androidx.compose.ui:ui-test-manifest", version.ref="composeUi" }
+# end compose
